# readable-ml-framework

./: .clang-format  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: linting.yml  tests.yml
examples/: backward.py  classification.py  classification_example_with_readable_ml_framework.ipynb
framework/: __init__.py  autograd.py  ops.py  tensor.py
framework/_ops/: mytensor.cpp
framework/core/: __init__.py  ops.cpp  ops.h  python_bind.cpp  tensor.cpp  tensor.h
framework/cpp/: python_bind.cpp
framework/ops/: __init__.py  backward.py  forward.py  op_record.py
shell/: format.sh  lint.sh  loc.sh
tests/: test_ops.py  test_tensor.py
