[build-system]
requires = ["setuptools>=61.0.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = []

[tool.isort]
profile = "black"
known_first_party = ["framework", "tests"]
default_section = "THIRDPARTY"
line_length = 80
force_single_line = "True"

